[package]
name = "enzyme-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
thiserror = "1.0"
which = "5.0"

[dev-dependencies]
tempfile = "3.10"
