[package]
name = "enzyme-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
thiserror = "1.0"
which = "5.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
